--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
             Dette er <strong>min</strong> første nettside
         </p>
 
+        <p>
+            Ny versjon incoming!!
+        </p>
+
     </main>
 <!--Her er samlingspunkt for bedrifts info, sosiale medier og lignende-->
     <footer>
 
         <p>kodeloftet</p>
 
-        
+
     </footer>
     
 </body>
