--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         font-size: 60px;
         font-weight: bold;
       }
+      footer {
+        margin-top: 70px;
+        font-size: 100px;
+      }
     </style>
   </head>
   <body>
